syntax = "proto3";
option go_package = "./addressBook";
package addressBook;

message Person {
  string name = 1;
  fixed32 id = 2;
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType phone_type = 2;
  }
  repeated PhoneNumber phone_numbers = 4;
}

message AddressBook {
  repeated Person persons = 1;
}